# ROS

./: README.md
In Progress Code/catkin_ws_big/devel/: .rosinstall
In Progress Code/catkin_ws_big/src/car_test/: code.py
In Progress Code/catkin_ws_flat/devel/: .catkin
ROS_V1/: cartest.py
ROS_V1/Hill/: Func.xlsx  Func3.csv  Hill V1 v1.f3d  Hill V1 v1.smt  Hill V1 v1.stl  Hill V2.f3d
ROS_V1/Other Worlds/worlds/: World_Original.xml
ROS_V1/TFG - General/Blender/: Hill_V1.blend  hill.stl
ROS_V1/VS Code Mac/: World_Editado.xml  World_Editado2.xml  World_Editado3.xml
ROS_V2/: my_mesh.world
ROS_V2/diffDrive_ws/devel/: .catkin  .rosinstall  setup.sh
ROS_V2/diffDrive_ws/src/DiffDriveRobot/simulation_environment/: CMakeLists.txt  package.xml
ROS_V2/diffDrive_ws/src/DiffDriveRobot/simulation_environment/launch/: diff_drive.launch
ROS_V2/diffDrive_ws/src/DiffDriveRobot/simulation_environment/models/diff_drive/: diff_drive.gazebo  diff_drive.xacro  macros.xacro  materials.xacro  parameter.xacro
ROS_V2/diffDrive_ws/src/DiffDriveRobot/simulation_environment/worlds/: diff_drive.world
ROS_V2/ros_ws/devel/: .catkin  _setup_util.py  setup.sh
ROS_V2/set_speed_joint_cpp/set_speed_joint_cpp/: package.xml
ROS_V2/simulation_ws/devel/: .catkin
ROS_V3/catkin_ws/devel/: local_setup.sh
models/Hill Files/: Drawing2.dwg  Hill V2 stl.stl
models/Hill Files/Hill Small/: hillv4.1.blend  hillv4.2.blend  hillv4.2.dae
models/Latest Version (Scaled)/: hill25.blend  hill25.blend1  hill5.blend  hill5.blend1  hill5.dae
models/models_v1/hill/: model.sdf
(+94 files in other folders)
